test/errors/assert/table.yasl

let x_mt = {
    .f: fn() {
        assert false
    },
    .g: fn() {
        echo false
    } }

const x = {}
mt.set(x, x_mt)

x->f()
